[tool.poetry]
name = "my_dsc"
version = "0.1.0"
description = ""
authors = ["Anil Zeybek <anil.zeybek98@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.10.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
numpy = "^1.22.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
gym = "^0.21.0"
cpprb = "^10.3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
